# servey_service

./: README.md  docker-compose.yaml  main_data.json  pyproject.toml  users_data.json
config/: settings.py
main/: admin.py  models.py  services.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py  0003_remove_result_unique_history_and_answer_and_more.py
main/templates/main/: base.html  question.html  statistics.html  survey_list.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
